tethered webView to top of view controller

--- a/WebViewer/Base.lproj/Main.storyboard
+++ b/WebViewer/Base.lproj/Main.storyboard
@@ -31,8 +31,8 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <webView contentMode="scaleToFill" id="TS3-yG-4x2">
-                                <rect key="frame" x="11" y="60" width="293" height="501"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                <rect key="frame" x="11" y="60" width="293" height="508"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
                         </subviews>
